changed some things

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
     <header>
         <!--Header section with navigation using the logo class from general.css-->
-        <div>
-            <img src="images/logo.png" alt="Company Logo" class="logo">
-        </div>
+
         <nav>
             <ul>
+
+                <li> <img src="images/logo.png" alt="Company Logo" class="logo"> </li>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="careers.html">Careers</a></li>
