--- a/about.html
+++ b/about.html
@@ -16,11 +16,10 @@
 <body>
     <header>
         <!--Header with navigation-->
-        <div>
-            <img src="images/logo.png" alt="Company Logo" class="logo">
-        </div>
+
         <nav>
             <ul>
+                <li><img src="images/logo.png" alt="Company Logo" class="logo"></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="careers.html">Careers</a></li>
