--- a/careers.html
+++ b/careers.html
@@ -16,11 +16,10 @@
 <body>
     <header>
         <!-- navigation thingy-->
-        <div>
-            <img src="images/logo.png" alt="Company Logo" class="logo">
-        </div>
+
         <nav>
             <ul>
+                <li><img src="images/logo.png" alt="Company Logo" class="logo"></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="careers.html" class="active">Careers</a></li>
