--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Your Name">
     <title>About Us</title>
     <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
@@ -68,7 +68,7 @@
 
     <dl>
         <h2>Frequently Asked Questions (FAQ)</h2>
-        
+
         <dt>What is the typical timeline for a project?</dt>
         <li>Project timelines vary based on complexity, but we typically estimate 4-6 weeks for small to medium projects
             and
