--- a/careers.html
+++ b/careers.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Your Name">
     <title>Careers</title>
     <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/careers.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
